# neurofly_interface

./: CMakeLists.txt  build.sh  build_workspace.sh  package.xml
config/: neurofly_gains.yaml  neurofly_trackers.yaml  tracker_params.yaml  trackers.yaml
control_launch/config/: so3_control_gains.yaml  tracker_params.yaml
control_launch/launch/: control_mp.launch
docker/: build.sh  neurofly-interface.Dockerfile  run.sh  setup_zed_udev.sh
launch/: planner_launch.launch.py  system_launch.launch.py  zed_vicon.launch.py
system_launch/: CMakeLists.txt  package.xml
system_launch/launch/: system_launch.launch  system_launch.launch.py  zed_vicon.launch
